--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
                      <h4 class="mini_result_shirt">There is a draw between both</h4>
                  </div>
             </div> 
-         </ol
+        </ol>
+        <p>&nbsp</p> 
          <div id="result">
              <p>
                  I have tested six images<br>
